--- a/Exercicios/EX022/fundo006.html
+++ b/Exercicios/EX022/fundo006.html
@@ -6,17 +6,25 @@
     <title>Posicionamento</title>
     <style>
         body{
-            height: 100vh;
+            /*height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            /*shorthand - background
+            color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: 1px solid black;
@@ -27,7 +35,22 @@
 <body>
     <main>
         <h1>Teste de Imagens</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora eaque ad, consequatur dolorum placeat quam fugiat molestias ducimus nemo aspernatur temporibus consequuntur, ea, rerum deserunt tenetur suscipit porro! Aperiam, assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non officia dolorem aliquid ex, consequatur odit labore enim at, tempore dicta eius esse eaque quae, odio eos iste ut nulla excepturi.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora eaque ad, consequatur dolorum placeat quam fugiat molestias ducimus nemo aspernatur temporibus consequuntur, ea, rerum deserunt tenetur suscipit porro! Aperiam, assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non officia dolorem aliquid ex, consequatur odit labore enim at, tempore dicta eius esse eaque quae, odio eos iste ut nulla excepturi.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora eaque ad, consequatur dolorum placeat quam fugiat molestias ducimus nemo aspernatur temporibus consequuntur, ea, rerum deserunt tenetur suscipit porro! Aperiam, assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non officia dolorem aliquid ex, consequatur odit labore enim at, tempore dicta eius esse eaque quae, odio eos iste ut nulla excepturi.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora eaque ad, consequatur dolorum placeat quam fugiat molestias ducimus nemo aspernatur temporibus consequuntur, ea, rerum deserunt tenetur suscipit porro! Aperiam, assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non officia dolorem aliquid ex, consequatur odit labore enim at, tempore dicta eius esse eaque quae, odio eos iste ut nulla excepturi.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora eaque ad, consequatur dolorum placeat quam fugiat molestias ducimus nemo aspernatur temporibus consequuntur, ea, rerum deserunt tenetur suscipit porro! Aperiam, assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non officia dolorem aliquid ex, consequatur odit labore enim at, tempore dicta eius esse eaque quae, odio eos iste ut nulla excepturi.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora eaque ad, consequatur dolorum placeat quam fugiat molestias ducimus nemo aspernatur temporibus consequuntur, ea, rerum deserunt tenetur suscipit porro! Aperiam, assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non officia dolorem aliquid ex, consequatur odit labore enim at, tempore dicta eius esse eaque quae, odio eos iste ut nulla excepturi.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora eaque ad, consequatur dolorum placeat quam fugiat molestias ducimus nemo aspernatur temporibus consequuntur, ea, rerum deserunt tenetur suscipit porro! Aperiam, assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non officia dolorem aliquid ex, consequatur odit labore enim at, tempore dicta eius esse eaque quae, odio eos iste ut nulla excepturi.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora eaque ad, consequatur dolorum placeat quam fugiat molestias ducimus nemo aspernatur temporibus consequuntur, ea, rerum deserunt tenetur suscipit porro! Aperiam, assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non officia dolorem aliquid ex, consequatur odit labore enim at, tempore dicta eius esse eaque quae, odio eos iste ut nulla excepturi.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora eaque ad, consequatur dolorum placeat quam fugiat molestias ducimus nemo aspernatur temporibus consequuntur, ea, rerum deserunt tenetur suscipit porro! Aperiam, assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non officia dolorem aliquid ex, consequatur odit labore enim at, tempore dicta eius esse eaque quae, odio eos iste ut nulla excepturi.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora eaque ad, consequatur dolorum placeat quam fugiat molestias ducimus nemo aspernatur temporibus consequuntur, ea, rerum deserunt tenetur suscipit porro! Aperiam, assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non officia dolorem aliquid ex, consequatur odit labore enim at, tempore dicta eius esse eaque quae, odio eos iste ut nulla excepturi.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora eaque ad, consequatur dolorum placeat quam fugiat molestias ducimus nemo aspernatur temporibus consequuntur, ea, rerum deserunt tenetur suscipit porro! Aperiam, assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non officia dolorem aliquid ex, consequatur odit labore enim at, tempore dicta eius esse eaque quae, odio eos iste ut nulla excepturi.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora eaque ad, consequatur dolorum placeat quam fugiat molestias ducimus nemo aspernatur temporibus consequuntur, ea, rerum deserunt tenetur suscipit porro! Aperiam, assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non officia dolorem aliquid ex, consequatur odit labore enim at, tempore dicta eius esse eaque quae, odio eos iste ut nulla excepturi.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora eaque ad, consequatur dolorum placeat quam fugiat molestias ducimus nemo aspernatur temporibus consequuntur, ea, rerum deserunt tenetur suscipit porro! Aperiam, assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non officia dolorem aliquid ex, consequatur odit labore enim at, tempore dicta eius esse eaque quae, odio eos iste ut nulla excepturi.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora eaque ad, consequatur dolorum placeat quam fugiat molestias ducimus nemo aspernatur temporibus consequuntur, ea, rerum deserunt tenetur suscipit porro! Aperiam, assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non officia dolorem aliquid ex, consequatur odit labore enim at, tempore dicta eius esse eaque quae, odio eos iste ut nulla excepturi.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora eaque ad, consequatur dolorum placeat quam fugiat molestias ducimus nemo aspernatur temporibus consequuntur, ea, rerum deserunt tenetur suscipit porro! Aperiam, assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non officia dolorem aliquid ex, consequatur odit labore enim at, tempore dicta eius esse eaque quae, odio eos iste ut nulla excepturi.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora eaque ad, consequatur dolorum placeat quam fugiat molestias ducimus nemo aspernatur temporibus consequuntur, ea, rerum deserunt tenetur suscipit porro! Aperiam, assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non officia dolorem aliquid ex, consequatur odit labore enim at, tempore dicta eius esse eaque quae, odio eos iste ut nulla excepturi.
+        </p>
     </main>
 </body>
 </html>
