--- a/Desafios/d012/pacote-d012/index.html
+++ b/Desafios/d012/pacote-d012/index.html
@@ -33,7 +33,7 @@
         </p>
     </section>
     
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes
             </br>
@@ -88,7 +88,7 @@
         </p>
     </section>
     
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas
             </br>
@@ -140,7 +140,7 @@
             </br>
             Deixe que Deus interprete
             </br>
-        </p>.
+        </p>
     </section>
 
     <footer>
