--- a/Exercicios/EX023/index.html
+++ b/Exercicios/EX023/index.html
@@ -10,18 +10,22 @@
         }
 
         table{
-            width: 300px;
+            width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
 
         td{
             border: 1px solid black;
-            padding: 10px;
+            padding: 5px;
+            text-align: center;
+            vertical-align: middle;
         }
 
-        tr.linha{
-            background-color: aqua;
+        .numero{
+            text-align: right;
         }
+
     </style>
 </head>
 <body>
@@ -42,17 +46,17 @@
         <tr>
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">B3</td>
         </tr>
         <tr>
             <td>A3</td>
             <td>B3</td>
             <td>C4</td>
         </tr>
-        <tr class="linha">
+        <tr>
             <td>A4</td>
-            <td>B4</td>
-            <td>C4</td>
+            <td class="numero">A2</td>
+            <td>C4<                                                                                                                                                                                                     /td>
         </tr>
     </table>
 
