--- a/Exercicios/EX025/form008.html
+++ b/Exercicios/EX025/form008.html
@@ -13,6 +13,17 @@
 </head>
 <body>
     <h1>teste de Formulario</h1>
-    
+    <p>
+        <label for="in1">Numero 1: </label>
+        <input type="number" name="n1" id="in1" min="0" max="50" required>
+    </p>
+    <p>
+        <label for="in2">Numero 2: </label>
+        <input type="number" name="n2" id="in2" min="0" max="50" required> 
+    </p>
+    <p>
+    <input type="submit" value="Enviar">
+        <input type="reset" value="Limpar">
+    </p>
 </body>
 </html>
