--- a/Exercicios/ex027/flex003/index.html
+++ b/Exercicios/ex027/flex003/index.html
@@ -8,7 +8,7 @@
         div.container{
             background-color: aqua;   
             display: flex;
-            flex-flow: row wrap;
+            flex-flow: row wrap-reverse;
 
             /*flex-flow: row wrap; = maneira resumida 
             de usar:⬇️⬇️⬇️ 
